🐛 Fix links url and remove unexisting nav link

--- a/galeria.html
+++ b/galeria.html
@@ -78,7 +78,7 @@
 <body>
   <main class="container">
 
-    <a href="index.html" class="btn btn-pink mb-4">← Voltar</a>
+    <a href="./index.html" class="btn btn-pink mb-4">← Voltar</a>
 
 
     <h1>Galeria de Fotos</h1>
