--- a/index.html
+++ b/index.html
@@ -40,19 +40,14 @@
                 <small class="mb-2 d-block">(Não significa que ficará bonito kkkk mesmo com sites eu sou péssimo no visual)</small>
                 <p>Este é apenas um breve retrado da (parte inicial da) nossa jornada juntos, nosso Scrapbook Virtual, ou Web Scrapbook também kkk como preferir chamar... Espero que você goste !</p>
             </div>
-            <!-- <div class="modal-footer">
-              <button type="button" class="btn btn-primary">Save changes</button>
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div> -->
           </div>
         </div>
       </div>
 
 
     <nav id="main_nav">
-        <a href="/sobrenos.html">Sobre Nós!</a>
-        <a href="/galeria.html">Galeria</a>
-        <a href="/historias.html">Histórias</a>
+        <a href="./sobrenos.html">Sobre Nós!</a>
+        <a href="./galeria.html">Galeria</a>
     </nav>
     
     <section class="carousel">
