--- a/sobrenos.html
+++ b/sobrenos.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <a href="index.html" id="back-arrow" title="Voltar para a Home">
+    <a href="./index.html" id="back-arrow" title="Voltar para a Home">
         &#8592; Voltar
     </a>
 
